force-app/main/default/objects/RW_Bank_Details__c/RW_Bank_Details__c.object-meta.xml
<CustomObject>
    <label>Bank Details</label>
    <nameField>
        <displayFormat>BD-{0000}</displayFormat>
        <label>Bank Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>