force-app/main/default/objects/RW_Bank_Details__c/fields/RW_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Branch_Name__c</fullName>
    <label>Branch Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vikhroli</fullName>
            </value>
            <value>
                <fullName>Thane</fullName>
            </value>
            <value>
                <fullName>Mulund</fullName>
            </value>
            <value>
                <fullName>Chembur</fullName>
            </value>
            <value>
                <fullName>Andheri</fullName>
            </value>
            <value>
                <fullName>Ghatkopar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>