force-app/main/default/objects/RW_Bank_Details__c/fields/RW_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Project_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Name</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Bank Details</relationshipLabel>
    <relationshipName>Bank_Details</relationshipName>
    <type>Lookup</type>
</CustomField>