force-app/main/default/objects/RW_Bank_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RW_Banks_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>